Orpie ChangeLog
------------------------------------------------------------------------

v1.3

   2004-07-04        Added binomial coefficient function.

   2004-07-03        Added LCM function.

   2004-06-27        Implemented a method for handling interruptible
                     computations.

                     Added exact factorial and GCD functions.

   2004-06-22        Removed dependence on Ocaml Unix module.


v1.2

   2004-06-16        Version 1.2.0 release.

   2004-06-15        Fixed the build script to support parallel make.
   
                     Replaced 'datafile', 'buffer', and 'input_buffer'
                     orpierc variables with the 'datadir' variable.
                     
                     Fixed crash due to displaying 'about' screen in
                     a very small terminal window.

   2004-06-14        Implemented user-defined variables and
                     autocompletion routines.

   2004-06-13        mod() now has a check for >1 stack elements.

   2004-04-22        Orpie no longer generates an error message if
                     it is run without a preexisting calculator
                     state file.


v1.1

   2004-04-17        Version 1.1.1 release.  Added Chris Petersen's
                     orpie.spec file for building RPMs.

   2004-04-16        Version 1.1 release.

   2004-04-14        Added a linear system solver that avoids
                     computation of an inverse matrix.

   2004-04-13        Created a parser and associated routines that
                     enable Orpie to read data entered in an external
                     editor.

   2004-04-10        Added a check for inversion of ill-conditioned
                     real matrices.

                     Implemented Mutt-like rcfile macros.

   2004-04-09        Added a configuration variable to enable
                     hiding the help panel.


v1.0

   2004-04-07        Version 1.0.2 release.  Added a manpage for